Bug 502486 - Shortcut for Display Configuration does not work anymore due to dbus communication issues
Summary: Shortcut for Display Configuration does not work anymore due to dbus communic...
Status: RESOLVED FIXED
Alias: None
Product: KScreen
Classification: Plasma
Component: OSD and Plasma applet (other bugs)
Version First Reported In: 6.3.4
Platform: Arch Linux Linux
: HI normal
Target Milestone: ---
Assignee: kscreen-bugs-null@kde.org
URL:
Keywords:
: 484763 502217 503328 503428 503437 503492 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-04-06 14:54 UTC by Alessandro Giugno
Modified: 2025-05-07 00:29 UTC (History)
16 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.5
Sentry Crash Report:


Attachments
kcmshell6 kcm_kscreen (44.47 KB, image/png)
2025-04-27 14:50 UTC, azynetz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alessandro Giugno 2025-04-06 14:54:09 UTC
SUMMARY
I was able to switch the display configuration with Meta+P but since recently, this does not work anymore. Shortcuts are still set in the system setting. There are multiple reports on reddit about this https://www.redditmedia.com/r/kde/comments/1jozg19/metap_doesnt_show_anything_anymore/.

STEPS TO REPRODUCE
1. Connect a second display
2. Hit Meta+P

OBSERVED RESULT
On-screen display does not pop. Display configuration can be changed in the system setting, though.

EXPECTED RESULT
On-screen display pops up. Changes can be done using either shortcut or system settings.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.3.4
KDE Frameworks Version: 6.12.0
Qt Version: 6.9.0
Kernel Version: 6.13.8-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 9 7940HS with Radeon 780M Graphics
Memory: 14.8 GiB of RAM
Graphics Processor 1: AMD Radeon 780M
Graphics Processor 2: zink Vulkan 1.4
Manufacturer: LENOVO
Product Name: 82Y5
System Version: Legion Slim 5 14APH8

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2025-04-07 19:16:42 UTC
Works for me on Fedora 41 with Qt 6.8.2. Might be a Qt 6.9 regression. Can you see if Meta+P generates a new entry at the top of the list visible in `coredumpctl --reverse`? If so, can you attach a backtrace of it using the instructions at https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports#Retrieving_a_backtrace_using_coredumpctl

If it's not crashing, can you run `journalctl -f` in a terminal window, then press Meta+P, and then copy and paste here anything new that was printed to the terminal window?

Thanks!
Comment 2 Henrique Sant'Anna 2025-04-07 21:36:00 UTC
(In reply to Nate Graham from comment #1)
> `coredumpctl --reverse`? 

nothing

> If it's not crashing, can you run `journalctl -f` in a terminal window, then
> press Meta+P, and then copy and paste here anything new that was printed to
> the terminal window?

abr 07 18:32:37 anarch systemd[1748]: Started Configurações da tela.
abr 07 18:32:39 anarch systemd[1748]: Started Configurações da tela.
abr 07 18:32:41 anarch systemd[1748]: Started Configurações da tela.
abr 07 18:32:47 anarch systemd[1748]: Started Configurações da tela.
abr 07 18:32:50 anarch systemd[1748]: Started Configurações da tela.
abr 07 18:32:52 anarch systemd[1748]: Started Configurações da tela.
abr 07 18:33:02 anarch dbus-send[10483]: Error org.freedesktop.DBus.Error.NoReply: Did not receive a reply. Possible causes include: the remote application did not send a reply, the message bus security policy blocked the reply, the reply timeout expired, or the network connection was broken.
abr 07 18:33:02 anarch systemd[1748]: app-org.kde.kscreen@f9e62d8368ba48b9a3aee8ae126283f6.service: Main process exited, code=exited, status=1/FAILURE
abr 07 18:33:02 anarch systemd[1748]: app-org.kde.kscreen@f9e62d8368ba48b9a3aee8ae126283f6.service: Failed with result 'exit-code'.
abr 07 18:33:04 anarch dbus-send[10535]: Error org.freedesktop.DBus.Error.NoReply: Did not receive a reply. Possible causes include: the remote application did not send a reply, the message bus security policy blocked the reply, the reply timeout expired, or the network connection was broken.
abr 07 18:33:04 anarch systemd[1748]: app-org.kde.kscreen@c0383869e857434fa430eb6caa1c8a17.service: Main process exited, code=exited, status=1/FAILURE
abr 07 18:33:04 anarch systemd[1748]: app-org.kde.kscreen@c0383869e857434fa430eb6caa1c8a17.service: Failed with result 'exit-code'.
abr 07 18:33:06 anarch dbus-send[10536]: Error org.freedesktop.DBus.Error.NoReply: Did not receive a reply. Possible causes include: the remote application did not send a reply, the message bus security policy blocked the reply, the reply timeout expired, or the network connection was broken.
abr 07 18:33:06 anarch systemd[1748]: app-org.kde.kscreen@602b3d3c980445af8ae79f046eb214ee.service: Main process exited, code=exited, status=1/FAILURE
abr 07 18:33:06 anarch systemd[1748]: app-org.kde.kscreen@602b3d3c980445af8ae79f046eb214ee.service: Failed with result 'exit-code'.
abr 07 18:33:12 anarch dbus-send[10639]: Error org.freedesktop.DBus.Error.NoReply: Did not receive a reply. Possible causes include: the remote application did not send a reply, the message bus security policy blocked the reply, the reply timeout expired, or the network connection was broken.
abr 07 18:33:12 anarch systemd[1748]: app-org.kde.kscreen@f74e0296b76e4e05a967a5cf5ba98eaf.service: Main process exited, code=exited, status=1/FAILURE
abr 07 18:33:12 anarch systemd[1748]: app-org.kde.kscreen@f74e0296b76e4e05a967a5cf5ba98eaf.service: Failed with result 'exit-code'.
abr 07 18:33:15 anarch dbus-send[10641]: Error org.freedesktop.DBus.Error.NoReply: Did not receive a reply. Possible causes include: the remote application did not send a reply, the message bus security policy blocked the reply, the reply timeout expired, or the network connection was broken.
abr 07 18:33:15 anarch systemd[1748]: app-org.kde.kscreen@36966eec1c964f1db50dc5f2d90fb4e6.service: Main process exited, code=exited, status=1/FAILURE
abr 07 18:33:15 anarch systemd[1748]: app-org.kde.kscreen@36966eec1c964f1db50dc5f2d90fb4e6.service: Failed with result 'exit-code'.
abr 07 18:33:17 anarch dbus-send[10692]: Error org.freedesktop.DBus.Error.NoReply: Did not receive a reply. Possible causes include: the remote application did not send a reply, the message bus security policy blocked the reply, the reply timeout expired, or the network connection was broken.
abr 07 18:33:17 anarch systemd[1748]: app-org.kde.kscreen@6dff0b643c274d55b96ff887168b83ed.service: Main process exited, code=exited, status=1/FAILURE
abr 07 18:33:17 anarch systemd[1748]: app-org.kde.kscreen@6dff0b643c274d55b96ff887168b83ed.service: Failed with result 'exit-code'.
Comment 3 Alessandro Giugno 2025-04-08 06:11:11 UTC
> coredumpctl --reverse

No new entries when hiting Meta+P.

> journalctl -f

Apr 08 08:03:14 Legion5 wpa_supplicant[1481]: wlan0: CTRL-EVENT-SIGNAL-CHANGE above=1 signal=-15 noise=9999 txrate=26000
Apr 08 08:03:16 Legion5 systemd[1682]: Started Display Configuration.
...
Apr 08 08:03:41 Legion5 dbus-send[17105]: Error org.freedesktop.DBus.Error.NoReply: Did not receive a reply. Possible causes include: the remote application did not send a reply, the message bus security policy blocked the reply, the reply timeout expired, or the network connection was broken.
Apr 08 08:03:41 Legion5 systemd[1682]: app-org.kde.kscreen@830aff2ac8914517a9a276926ae4ae58.service: Main process exited, code=exited, status=1/FAILURE
Apr 08 08:03:41 Legion5 systemd[1682]: app-org.kde.kscreen@830aff2ac8914517a9a276926ae4ae58.service: Failed with result 'exit-code'.

Between the message (indicated by "..." in the output above) there are few more entries simliar to the first. It looks like the output is similar to Henrique Sant'Anna.
Comment 4 Nate Graham 2025-04-08 18:35:41 UTC
Seems like dbus is messed up on the system somehow?
Comment 5 Matthieu Vion 2025-04-09 07:58:20 UTC
Hello, I face a really similar issue, `Meta+P` does not make the popup visible,

But in my case, when pressing the shortcut I only get this line of log in `journalctl -f` :

Apr 09 09:56:30 mattpad systemd[1671]: Started Configuration de l'affichage.

---

SOFTWARE/OS VERSIONS :
Operating System: Arch Linux 
KDE Plasma Version: 6.3.4
KDE Frameworks Version: 6.12.0
Qt Version: 6.9.0
Kernel Version: 6.13.8-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 PRO 5850U with Radeon Graphics
Memory: 27.2 Gio of RAM
Graphics Processor: AMD Radeon Graphics
Manufacturer: LENOVO
Product Name: 21A00008FR
System Version: ThinkPad P14s Gen 2a
Comment 6 SigHunter 2025-04-09 16:52:08 UTC
happens to me too on Gentoo

Operating System: Gentoo Linux 2.17
KDE Plasma Version: 6.3.4
KDE Frameworks Version: 6.12.0
Qt Version: 6.8.3
Kernel Version: 6.14.1-gentoo-dist (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 9800X3D 8-Core Processor
Memory: 60.5 GiB of RAM
Graphics Processor 1: NVIDIA GeForce RTX 3080 Ti
Graphics Processor 2: AMD Radeon Graphics
dbus 1.16.2

I also see no backtraces in coredumpctl. 

when pressing Meta+p, the only thing that shows up right that second is:

Apr 09 18:48:19 sighunter systemd[1073]: Started Anzeige-Einrichtung.

and always exactly 25 seconds later:

Apr 09 18:48:44 sighunter dbus-send[175934]: Error org.freedesktop.DBus.Error.NoReply: Did not receive a reply. Possible causes include: the remote application did not send a reply, the message bus security policy blocked the reply, the reply timeout expired, or the network connection was broken.
Apr 09 18:48:44 sighunter systemd[1073]: app-org.kde.kscreen@f4d8002bf5f44dafb885917b3c22fb75.service: Main process exited, code=exited, status=1/FAILURE
Apr 09 18:48:44 sighunter systemd[1073]: app-org.kde.kscreen@f4d8002bf5f44dafb885917b3c22fb75.service: Failed with result 'exit-code'.
Comment 7 0RF30 2025-04-15 19:51:47 UTC
Same issue, both on

Operating System: Kubuntu 25.04
KDE Plasma Version: 6.3.4
KDE Frameworks Version: 6.12.0
Qt Version: 6.8.3
Kernel Version: 6.14.0-15-generic (64-bit)
Graphics Platform: Wayland

and :

Operating System: CachyOS Linux
KDE Plasma Version: 6.3.4
KDE Frameworks Version: 6.12.0
Qt Version: 6.9.0
Kernel Version: 6.14.2-2-cachyos (64-bit)
Graphics Platform: Wayland

I'm sure it's working fine in PikaOS which still use Plasma 6.2
Comment 8 Bug Janitor Service 2025-04-16 15:28:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kscreen/-/merge_requests/370
Comment 9 Kai Uwe Broulik 2025-04-16 15:31:02 UTC
Git commit 50de20ad885c2e74fc8781ad6952656385afb4fe by Kai Uwe Broulik.
Committed on 16/04/2025 at 15:27.
Pushed by broulik into branch 'master'.

osd: Create OsdManager after QGuiApplication

Doing any major Qt stuff before creating the qApp doesn't really work.

M  +1    -1    osd/main.cpp

https://invent.kde.org/plasma/kscreen/-/commit/50de20ad885c2e74fc8781ad6952656385afb4fe
Comment 10 Kai Uwe Broulik 2025-04-16 15:33:02 UTC
Git commit eee99e80fb44e43862c4c803359d4b7157bbe478 by Kai Uwe Broulik.
Committed on 16/04/2025 at 15:31.
Pushed by broulik into branch 'Plasma/6.3'.

osd: Create OsdManager after QGuiApplication

Doing any major Qt stuff before creating the qApp doesn't really work.


(cherry picked from commit 50de20ad885c2e74fc8781ad6952656385afb4fe)

Co-authored-by: Kai Uwe Broulik <kde@privat.broulik.de>

M  +1    -1    osd/main.cpp

https://invent.kde.org/plasma/kscreen/-/commit/eee99e80fb44e43862c4c803359d4b7157bbe478
Comment 11 Julian Pollak 2025-04-17 21:11:30 UTC
*** Bug 502217 has been marked as a duplicate of this bug. ***
Comment 12 Luis Bocanegra 2025-04-19 16:41:05 UTC
*** Bug 484763 has been marked as a duplicate of this bug. ***
Comment 13 Nate Graham 2025-04-25 11:31:59 UTC
*** Bug 503328 has been marked as a duplicate of this bug. ***
Comment 14 azynetz 2025-04-27 14:50:58 UTC
Created attachment 180707 [details]
kcmshell6 kcm_kscreen
Comment 15 azynetz 2025-04-27 14:54:45 UTC
I have the same problem and I think it has to do with that my "integrated" monitor is not detected properly. In `kcmshell6 kcm_kscreen` there should be 2 monitors to drag around but the is only 1. See screenshot.
Comment 16 John Kizer 2025-04-28 05:20:13 UTC
*** Bug 503428 has been marked as a duplicate of this bug. ***
Comment 17 Nate Graham 2025-04-28 15:11:23 UTC
That sounds like a different issue; please open a new bug report for it. Thanks!
Comment 18 John Kizer 2025-04-28 16:58:55 UTC
*** Bug 503437 has been marked as a duplicate of this bug. ***
Comment 19 Nate Graham 2025-04-28 22:04:00 UTC
*** Bug 503492 has been marked as a duplicate of this bug. ***