osd: Create OsdManager after QGuiApplication

Doing any major Qt stuff before creating the qApp doesn't really work.

BUG: 502486